--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-div.amiibos {
+div#amiibos {
     display: grid; grid-template-columns: auto auto auto auto; margin-top: 20px;
     background-color: #eefaee;
 }
